implemente bien bustrap y tambien lo cambie por una referencia a la web¨
´´

¨¨

--- a/style.css
+++ b/style.css
@@ -3,8 +3,11 @@
     height: 4em;
 }
 .seccion{
-    border: 1px solid;
-    border-radius: 1em;
+    border: 1px solid ;
+    border-radius: 15px;
+    margin: 5px;
+    
+
 }
 span{
     font-family: italy;
